<resources>
    <string name="app_name">Market Master</string>
    <string name="text">Market Master</string>
    <string name="summary">Summary</string>
    <string name="map">Maps</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sell">Sell</string>
    <string name="history">History</string>
    <string name="call">Call</string>
    <string name="direction">Direction</string>

     <string name="my_profile">My profile</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
</resources>
